Mon Jan 05 01:25:17 GMT 2015  Olly Betts <olly@survex.com>

	* backends/glass/glass_check.cc: Check that dir_end is odd.

Tue Dec 23 21:26:49 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: More assertions about c.

Tue Dec 23 04:26:38 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: Fix assertion to allow for c being
	  DIR_START - D2 in leaf blocks.

Tue Dec 23 04:01:54 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: Add more assertions that c has
	  suitable values.

Tue Dec 23 03:58:00 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: In enter_key(), we know the insertion
	  point will be the position after the current cursor position, so
	  there's no need to call find_in_block() to locate it.

Tue Dec 23 03:11:12 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_check.cc: Add check that dir_end is odd.

Mon Dec 22 23:28:54 GMT 2014  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: Document situations in which the
	  cursor can be left pointing before DIR_START.

Mon Dec 22 03:39:14 GMT 2014  Olly Betts <olly@survex.com>

	* backends/glass/glass_freelist.cc: Add more freelist assertions.

Mon Dec 22 03:15:50 GMT 2014  Olly Betts <olly@survex.com>

	* backends/glass/glass_freelist.cc: Allow restricting the number of
	  freelist entries per block by setting GLASS_FREELIST_SIZE.

Sun Dec 21 20:55:47 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/weight.h: Document the enum stat_flags values.

Sun Dec 21 20:51:47 GMT 2014  Olly Betts <olly@survex.com>

	* include/xapian/weight.h: Fix indentation.

Sat Dec 20 10:40:44 GMT 2014  Sébastien Debrard <sebastien.debrard@gmail.com>

	* Makefile.am,configure.ac,pkgconfig/,xapian-core.spec.in: Generate a
	  file for pkg-config.  (Fixes#540)

Fri Dec 19 22:30:39 GMT 2014  Olly Betts <olly@survex.com>

	* common/errno_to_string.cc: Need stdlib.h under mingw.
